--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -90,7 +90,7 @@
 }
 
 .newsletter img {
-  width: 40%;
+  width: 35%;
   height: auto;
 }
 
